--- a/package.json
+++ b/package.json
@@ -9,15 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.1",
+    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@shadcn/ui": "^0.0.4",
+    "aos": "^2.3.4",
+    "canvas-confetti": "^1.9.3",
+    "chart.js": "^4.4.8",
+    "crypto-js": "^4.2.0",
+    "firebase": "^11.3.1",
+    "framer-motion": "^12.4.7",
+    "lucide-react": "^0.475.0",
+    "next": "15.1.7",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-confetti": "^6.2.3",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "react-focus-lock": "^2.13.6",
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
+    "shadcn-ui": "^0.9.4",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.17"
   }
 }
