--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@hookform/resolvers": "^4.1.1",
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@shadcn/ui": "^0.0.4",
     "aos": "^2.3.4",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "firebase": "^11.3.1",
     "framer-motion": "^12.4.7",
@@ -31,6 +34,8 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "shadcn-ui": "^0.9.4",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
   "devDependencies": {
