--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "react-focus-lock": "^2.13.6",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "shadcn-ui": "^0.9.4",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.4",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
