--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "next": "^15.1.7",
+    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.2.3",
