--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
     Content-Type = "application/manifest+json"
 
 [[headers]]
-  for = "/service-worker.js"
+  for = "/sw.js"
   [headers.values]
     Cache-Control = "public, max-age=0, must-revalidate"
 
